--- a/NoMoreShortcuts/NoMoreShortcuts.csproj
+++ b/NoMoreShortcuts/NoMoreShortcuts.csproj
@@ -79,6 +79,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="WavePlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
